tests/baselines/reference/interfaceNameAsIdentifier.errors.txt
==== tests/cases/compiler/interfaceNameAsIdentifier.ts (2 errors) ====
    interface C {
        (): void;
    }
    C();
    ~
!!! error TS2304: Cannot find name 'C'.
    
    module m2 {
        export interface C {
            (): void;
        }
    }
    
    m2.C();
    ~~
!!! error TS2304: Cannot find name 'm2'.
    